day-10/letsencrypt-issuers/ingress-6-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas-canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
      #    nginx.ingress.kubernetes.io/auth-type: "basic"
      #    nginx.ingress.kubernetes.io/auth-secret: "giropops-senhas-users"
      #    nginx.ingress.kubernetes.io/auth-realm: "Autenticação Necessária!"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
      #nginx.ingress.kuberneter.io/affinity: "cokie"
      #nginx.ingress.kuberneter.io/session-cokie-name: "giropops-cokie"
      #nginx.ingress.kubernetes.io/upstream-hash-by: "$request-uri"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - giropops.containers.expert
    secretName: giropops-container-expert-tls
  rules:
  - host: giropops.containers.expert
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
